<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:columnCount="2"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/XEMOBILE_DASHBOARD_FRAGMENT_HOLDER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2" />

        <TextView
            android:id="@+id/XEMOBILE_DASHBOARD_NEW_POST"
            style="@style/dashboard_item"
            android:layout_column="0"
            android:text="@string/dashboard_new_post" />

        <TextView
            android:id="@+id/XEMOBILE_DASHBOARD_MANAGE_POSTS"
            style="@style/dashboard_item"
            android:layout_column="1"
            android:text="@string/dashboard_manage_posts" />

        <TextView
            android:id="@+id/XEMOBILE_DASHBOARD_NEW_PAGE"
            style="@style/dashboard_item"
            android:layout_column="0"
            android:text="@string/dashboard_new_page" />

        <TextView
            android:id="@+id/XEMOBILE_DASHBOARD_MANAGE_PAGES"
            style="@style/dashboard_item"
            android:layout_column="1"
            android:text="@string/dashboard_manage_pages" />

        <TextView
            android:id="@+id/XEMOBILE_DASHBOARD_COMMENTS"
            style="@style/dashboard_item"
            android:layout_column="0"
            android:text="@string/dashboard_comments" />

        <TextView
            android:id="@+id/XEMOBILE_DASHBOARD_COMMENT_COUNT"
            style="@style/dashboard_item"
            android:layout_column="1"
            android:text="(5 new)" />

        <TextView
            android:id="@+id/XEMOBILE_DASHBOARD_USERS"
            style="@style/dashboard_item"
            android:layout_column="0"
            android:text="@string/dashboard_users" />

        <TextView
            android:id="@+id/XEMOBILE_DASHBOARD_MENU_MANAGER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_margin="@dimen/dashboard_item_margin"
            android:text="@string/dashboard_menu_manager"
            android:textColor="@color/dashboard_item_color" />

        <TextView
            android:id="@+id/XEMOBILE_DASHBOARD_QUICK_SETTINGS"
            style="@style/dashboard_item"
            android:layout_column="0"
            android:text="@string/dashboard_quick_settings" />

        <TextView
            android:id="@+id/XEMOBILE_DASHBOARD_MANAGE_WEBSITE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_margin="@dimen/dashboard_item_margin"
            android:text="@string/dashboard_manage_website"
            android:textColor="@color/dashboard_item_color" />
    </GridLayout>

</ScrollView>