<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/XEMOBILE_ADD_POST_POST_TITLE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_title"
        android:singleLine="true" />

    <EditText
        android:id="@+id/XEMOBILE_ADD_POST_POST_URL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url"
        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/XEMOBILE_HTML_EDITOR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		
        <Button
            android:id="@+id/XEMOBILE_ADD_POST_DELETE_BUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_post" />
        
        <Button
            android:id="@+id/XEMOBILE_ADD_POST_SAVE_AND_PUBLISH_BUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_and_publish"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/XEMOBILE_ADD_POST_SAVE_BUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/save" />
    </RelativeLayout>

</LinearLayout>