<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#ffffff">   
    
    <TextView
        android:id="@+id/XEMOBILE_WRONG_PASSWORD_TITLE"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:text="@string/wrong_password_dialog_title"
        />
    
    <TextView
        android:id="@+id/XEMOBILE_WRONG_PASSWORD_DESCRIPTION"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  
        android:text="@string/wrong_password_dialog_description"      
        />
    <Button
        android:id="@+id/XEMOBILE_WRONG_PASSWORD_BUTTON_CLOSE"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/wrong_password_dialog_close_button"        
        /> 
</LinearLayout>