<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#ffffff">

    <ImageView
        android:id="@+id/XEMOBILE_LOGO_LOGIN"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/welcome_screen_logo_description"
        android:src="@drawable/test" 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
    />
    
    <EditText
        android:id="@+id/XEMOBILE_LOGIN_ADDRESS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_website_url"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    
    <EditText
        android:id="@+id/XEMOBILE_LOGIN_USERNAME"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_username"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <EditText
        android:id="@+id/XEMOBILE_LOGIN_PASSWORD"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        
         <Button 
        android:id="@+id/XEMOBILE_LOGIN_BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"        
        android:text="@string/login_add_website_caption"/>
         
        <CheckBox 
             android:id="@+id/XEMOBILE_LOGIN_REMEMBERME"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Remember me"/>
        
    </LinearLayout>
    
   
</LinearLayout>